SG-571 - Make sure gtranslate icon is fully visible on small screens.

--- a/web/themes/custom/sfgovpl/src/sass/_layout.scss
+++ b/web/themes/custom/sfgovpl/src/sass/_layout.scss
@@ -84,33 +84,12 @@ header[role="banner"] {
             }
           }
         }
-        #block-gtranslate {
-          display: inline-block;
-          margin-right: 25px;
-          .gtranslate {
-            background: url(../images/icons/globe-blue.svg) no-repeat center left;
-            > select {
-              border: 0;
-              appearance: none;
-              padding: 0 0 0 25px;
-              margin: -2px 0 0 0;
-              height: auto;
-              width: 102px;
-              background: none;
-              color: #5168E4;
-              @include fs-nav-link;
-            }
-          }
-        }
         .sfgov-search-311-block {
           vertical-align: top;
           margin-top: -10px;
         }
         @include less-than('not-big') {
           nav.sfgov-nav {
-            display: none;
-          }
-          #block-gtranslate {
             display: none;
           }
         }
@@ -163,18 +142,6 @@ header[role="banner"] {
         .head-right--container {
           width: 54%;
           margin-top: 3px;
-          #block-gtranslate {
-            display: inline-block;
-            position: absolute;
-            right: 105px;
-            .gtranslate {
-              background-size: 24px 24px;
-              padding: 2px 0;
-              > select {
-                width: 0.1px;
-              }
-            }
-          }
         }
       }
     }
